--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Hello World!</title>
 </head>
 
-<body align="center">
-    <p>學</p>
-    <p>HTML</p>
-    <p>好好玩</p>
-
+<body>
+   <div align = "center">學<p>HTML</p>好好玩</div>
+   <hr>
 
 </body>
 
